Fix all layout issues: arrow overflow, old framework arrow were removed

--- a/src/Carousel/Carousel.global.scss
+++ b/src/Carousel/Carousel.global.scss
@@ -1,2 +1,14 @@
 @import "~slick-carousel/slick/slick.scss";
 @import "~slick-carousel/slick/slick-theme.scss";
+
+.slick-prev:before, .slick-next:before {
+  display: none;
+}
+
+.slick-next {
+  right: -32px;
+}
+
+.slick-prev {
+  left: -48px;
+}
